resolved registration issues with android 6